force-app/main/default/objects/Quote/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Copied from the opportunity so the lead shows its quotes.</inlineHelpText>
    <label>Source Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Lead_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>