force-app/main/default/objects/Quote/fields/Management_Approver__c.field-meta.xml
<CustomField>
    <fullName>Management_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Set automatically by flow from the Apex Demo Setting or the manager chain.</inlineHelpText>
    <label>Management Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes (Management Approver)</relationshipLabel>
    <relationshipName>Management_Approval_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>