force-app/main/default/objects/Quote/fields/Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percent__c</fullName>
    <formula>IF(TotalPrice &gt; 0, (TotalPrice - Total_Cost__c) / TotalPrice * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin % (DEMO)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>