force-app/main/default/objects/Quote/fields/Previous_Quote__c.field-meta.xml
<CustomField>
    <fullName>Previous_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Quote Version</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Revisions</relationshipLabel>
    <relationshipName>Revisions</relationshipName>
    <type>Lookup</type>
</CustomField>