force-app/main/default/objects/Quote/fields/Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Date__c</fullName>
    <inlineHelpText>Defaults to the creation date; editable for historical demo data.</inlineHelpText>
    <label>Quote Date</label>
    <type>Date</type>
</CustomField>