force-app/main/default/objects/Quote/fields/Quote_Version__c.field-meta.xml
<CustomField>
    <fullName>Quote_Version__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quote Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>