force-app/main/default/objects/Quote/fields/Requires_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Approval__c</fullName>
    <formula>BLANKVALUE(Discount, 0) &gt; $CustomMetadata.Apex_Demo_Setting__mdt.Default.Discount_Threshold_Percent__c</formula>
    <label>Requires Approval</label>
    <type>Checkbox</type>
</CustomField>