force-app/main/default/objects/Quote/fields/Sales_Manager_Approver__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Set automatically by flow: owner's manager, or the owner when no manager is set.</inlineHelpText>
    <label>Sales Manager Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes (Sales Manager Approver)</relationshipLabel>
    <relationshipName>Sales_Manager_Approval_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>