force-app/main/default/objects/Quote/fields/Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin__c</fullName>
    <formula>TotalPrice - Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Margin (DEMO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>