force-app/main/default/objects/Quote/validationRules/VR_Sent_Requires_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Sent_Requires_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Status, "Sent"), ISPICKVAL(Status, "Presented"), ISPICKVAL(Status, "Accepted")), BLANKVALUE(Discount, 0) &gt; 5, NOT(ISPICKVAL(Approval_Status__c, "Approved")))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>This quote exceeds the discount threshold and must be approved before it is sent or accepted. Use Submit for Approval.</errorMessage>
</ValidationRule>